@@ -1,6 +1,15 @@
 2003-08-09  Martin Fuchs	<martin-fuchs@gmx.net>
 	
-	* subsys/system/explorer implemented explorer and desktop window using shell view
+	* win32k/ntuser/window.c implemented NtUserSetShellWindowEx() and
+	introduced NtUserGetShellWindow().
+	* iface/addsys/w32ksvc.db added new syscall for NtUserGetShellWindow().
+	* lib/user32/misc/desktop.c: moved SetShellWindowEx() implementation
+	in kernal space, see NtUserSetShellWindowEx().
+
+2003-08-09  Martin Fuchs	<martin-fuchs@gmx.net>
+	
+	* subsys/system/explorer implemented explorer and desktop window
+	using shell view.
 
 2003-08-09  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
